# lago

./: .gitignore  .gitreview  .style.yapf  AUTHORS  MANIFEST.in  Makefile  README.json_schema  README.md  README.old  README.rst  README.templates.md  connect_to_engine.py  dom_template.xml  engine_preinstall_deps  host_preinstall_deps  lago.spec.in  net_template.xml  requirements.txt  setup.cfg  setup.py  setup_engine.sh  setup_host.sh  setup_storage_iscsi.sh  setup_storage_nfs.sh  test-requires.txt  testenv.spec.in  testenv_def.py  testfile2  tox-sdk.ini  tox.ini  utils.py
ansible/: README.md  lago-install.yml  lago.conf.j2  lago.el.repo  lago.install.yml  ovirt-ci-tools.repo
automation/: build-artifacts.packages  build-artifacts.packages.el7  build-artifacts.packages.el8  build-artifacts.packages.fc23  build-artifacts.sh  build-container.sh  check-merged.mounts  check-merged.packages  check-merged.packages.fc22  check-merged.sh  check-patch.mounts  check-patch.packages  check-patch.packages.el7  check-patch.packages.el8  check-patch.packages.fc23  check-patch.packages.fc24  check-patch.repos  check-patch.repos.el7  check-patch.repos.el8  check-patch.sh  common.sh  run_tests.sh
container/: Makefile  README.rst  build-lago-container.sh
container/el7-systemd/: Dockerfile
container/el7-systemd-lago/: Dockerfile.in  deploy.sh
container/el7-systemd-libvirt/: Dockerfile.in
container/scripts/: lago.sh  run-lago-container.sh
contrib/jenkins/: image_update_job.sh  job.xml  lago_cleanup.sh  lago_collect_logs.sh  lago_common.sh  lago_master_el6.sh  testenv_cleanup.sh  testenv_collect_logs.sh  testenv_common.sh  testenv_master_el6.sh
contrib/ovirt/examples/: el6engine_el7hosts_ovirt3.5.sh  rhel7_with_35.sh  rhel7_with_master.sh
contrib/ovirt/libexec/: build_engine_rpms.sh  build_ioprocess_rpms.sh  build_vdsm-jsonrpc-java_rpms.sh  build_vdsm_rpms.sh
contrib/ovirt/mock/: epel-6-x86_64_ovirt.cfg  epel-7-x86_64_ovirt.cfg
contrib/ovirt/ovirtlago/: lagocli-ovirt
contrib/ovirt/ovirttestenv/: testenvcli-ovirt
contrib/ovirt/setup_scripts/: add_local_repo.sh  bz_1195882_libvirt_workaround.sh  setup_container_host.sh  setup_engine.sh  setup_host.sh  setup_storage_iscsi.sh  setup_storage_nfs.sh
contrib/ovirt/test_scenarios/: basic_sanity.py  bootstrap.py  bootstrap_3_5.py  create_clean_snapshot.py  initialize_engine_el7.py
docs/: BUILD.rst  CI.rst  CPU.rst  Configuration.rst  Debugging_and_Troubleshooting.rst  Dev_Bootstrap.rst  EnableNested.rst  Env_Setup.rst  GIT_instructions.rst  Install.rst  Installation.rst  Jenkins_Example.rst  LagoInitFile.rst  Lago_Examples.rst  Makefile  Releases.rst  SDK.rst  Templates.rst  VirtualEnv.rst  conf.py  docs-requires.txt  index.rst  lago.rst  oVirt_Example.rst  oVirt_System_Tests.rst  ovirtlago.rst  requires.txt
docs/_static/: lago.xcf  lago_logo.xcf
docs/examples/: lago_sdk_one_vm_one_net.ipynb
docs/lago-tutorial/: README.md  README.rst  init.json  notes.txt
docs/lago-tutorial/templates-repo/: office.json  template-repo.json
etc/firewalld/services/: ovirtlago.xml
etc/lago.d/: lago.conf
etc/sudo/: lago
etc/testenv.d/: testenv.conf
lago/: __init__.py  brctl.py  build.py  cmd.py  config.py  constants.py  cont.py  db_utils.py  docker_utils.py  dom_template.xml  export.py  guestfs_tools.py  hooks.py  info.py  lago_ansible.py  lago_cloud_init.py  lagocli  lagocli-template-repo  lagocli_local  libvirt_utils.py  log_utils.py  net_br_template.xml  net_nat_template.xml  paths.py  prefix.py  qemuimg.py  repo.py  repo_utils.py  sdk.py  sdk_utils.py  service.py  snapshot_template.xml  ssh.py  subnet_lease.py  sysprep.py  templates.py  templates_store.py  utils.py  validation.py  verify_configuration.py  (+4 more)
lago/plugins/: __init__.py  cli.py  output.py  prefix.py  repo.py  service.py  vm.py
lago/providers/: __init__.py
lago/providers/libvirt/: cpu.py  network.py  utils.py  vm.py
lago/templates/: cloud-init-meta-data-base.j2  cloud-init-user-data-base.j2  sysprep-base.j2  sysprep-cirros0.3.5.j2  sysprep-debian.j2  sysprep-el6.j2  sysprep-el7.j2  sysprep-fc24.j2  sysprep-fc26.j2  sysprep-macros.j2
lago_template_repo/: __init__.py
lib/lago/: __init__.py  brctl.py  cmd.py  config.py  dirlock.py  dom_template.xml  lago.log.conf  log_utils.py  net_nat_template.xml  paths.py  prefix.py  subnet_lease.py  sysprep.py  templates.py  utils.py  virt.py
lib/lago/plugins/: __init__.py  cli.py  output.py
lib/lago_template_repo/: __init__.py
lib/testenv/: __init__.py  bootstrap.py  brctl.py  config.py  constants.py  dirlock.py  dom_template.xml  net_br_template.xml  paths.py  snapshot_template.xml  sysprep.py  templates.py  testenv.log.conf  utils.py  virt.py
ovirtlago/: __init__.py  cmd.py  merge_repos.py  reposetup.py  repoverify.py  testlib.py  utils.py  virt.py  waiters.py
ovirtlago/data/: ovirt_cpu_map.yaml  waiters.yaml
pbr-0.43.11-py2.7.egg/EGG-INFO/: PKG-INFO  SOURCES.txt  entry_points.txt
polkit/: lago.pkla  testenv.pkla
scripts/: check_style.sh  pre-commit.style  pull_system_python_libs.sh  update_if_needed.sh  version_manager.py
scripts/issues/: create_user_stories.rb  import_issues_from_github.rb  remove_duplicated_user_stories.rb
sudo/: lago  testenv
testenv/: testenvcli  testenvcli-template-repo  testenvcli_local
tests/: config.py  dirlock.py
tests/functional/: basic.bats  collect.bats  common.bash  deploy.bats  env_setup.bash  export.bats  helpers.bash  ovirt.basic.bats  ovirt.collect.bats  ovirt.deploy.bats  ovirt.runtest.bats  ovirt_common.bash  snapshot.bats  start.bats  status.bats
tests/functional-sdk/: conftest.py  lago_fixtures.py  test_cloud_init.py  test_sdk_sanity.py  utils.py
tests/functional/fixtures/: id_rsa  id_rsa.pub
tests/unit/: test_config.py  test_dirlock.py
tests/unit/lago/: conftest.py  test_build.py  test_config.py  test_dirlock.py  test_guestfs_tools.py  test_lago_ansible.py  test_libvirt_utils.py  test_lock.py  test_log_utils.py  test_prefix.py  test_sdk.py  test_sdk_utils.py  test_subnet_lease.py  test_sysprep.py  test_template_store.py  test_utils.py  test_virt.py  (+2 more)
(+115 files in other folders)
