[metadata]
name = lago
description =
    Deploy and tear down environments of several virtual machines
license = GNU GPLv2+
author = David Caro
author_email = dcaro@redhat.com
url = http://lago.readthedocs.com

[files]
packages =
    lago
    lago.plugins
    lago_template_repo
    ovirtlago
data_files =
# core lago
    /etc/lago.d = etc/lago.d/*
    /etc/sudoers.d/ = etc/sudo/lago
    /etc/polkit-1/localauthority/50-local.d = etc/polkit/*
# ovirt lago plugin
    /etc/firewalld/services = etc/firewalld/services/*

[flake8]
# ignore line break before operator
ignore = W503
exclude = */*venv/*,automation-build,rpmbuild,dist

[package_data]
lago =
    *.xml

[entry_points]
console_scripts =
    lagocli=lago.cmd:main
    lago=lago.cmd:main

lago.plugins.cli =
    init=lago.cmd:do_init
    cleanup=lago.cmd:do_cleanup
    destroy=lago.cmd:do_destroy
    start=lago.cmd:do_start
    status=lago.cmd:do_status
    stop=lago.cmd:do_stop
    shell=lago.cmd:do_shell
    console=lago.cmd:do_console
    snapshot=lago.cmd:do_snapshot
    revert=lago.cmd:do_revert
    copy-from-vm=lago.cmd:do_copy_from_vm
    copy-to-vm=lago.cmd:do_copy_to_vm
    ovirt=ovirtlago.cmd:OvirtCLI
    template-repo=lago_template_repo:TemplateRepoCLI

lago.plugins.output =
    default=lago.plugins.output:DefaultOutFormatPlugin
    json=lago.plugins.output:JSONOutFormatPlugin
    yaml=lago.plugins.output:YAMLOutFormatPlugin
