[metadata]
name = lago
description =
    Deploy and tear down environments of several virtual machines
license = GNU GPLv2+
author = David Caro
author_email = dcaro@redhat.com
url = http://lago.readthedocs.com

[files]
packages =
    lago
    lago.plugins
    lago_template_repo
    ovirtlago
data_files =
# core lago
    /etc/lago.d = etc/lago.d/*
    /etc/sudoers.d/ = etc/sudo/lago
    /etc/polkit-1/localauthority/50-local.d = etc/polkit/*
# ovirt lago plugin
    /etc/firewalld/services = etc/firewalld/services/*

[flake8]
# ignore line break before operator
ignore = W503
exclude = */*venv/*,automation-build,rpmbuild,dist,tests/functional

[package_data]
lago =
    *.xml

[entry_points]
console_scripts =
    lagocli=lago.cmd:main
    lago=lago.cmd:main

lago.plugins.cli =
    cleanup=lago.cmd:do_cleanup
    collect=lago.cmd:do_collect
    console=lago.cmd:do_console
    copy-from-vm=lago.cmd:do_copy_from_vm
    copy-to-vm=lago.cmd:do_copy_to_vm
    deploy=lago.cmd:do_deploy
    destroy=lago.cmd:do_destroy
    init=lago.cmd:do_init
    list=lago.cmd:do_list
    ovirt=ovirtlago.cmd:OvirtCLI
    revert=lago.cmd:do_revert
    set-current=lago.workdir:set_current
    shell=lago.cmd:do_shell
    snapshot=lago.cmd:do_snapshot
    start=lago.cmd:do_start
    status=lago.cmd:do_status
    stop=lago.cmd:do_stop
    template-repo=lago_template_repo:TemplateRepoCLI

lago.plugins.output =
    default=lago.plugins.output:DefaultOutFormatPlugin
    json=lago.plugins.output:JSONOutFormatPlugin
    yaml=lago.plugins.output:YAMLOutFormatPlugin
    flat=lago.plugins.output:FlatOutFormatPlugin

lago.plugins.vm =
    default=lago.vm:DefaultVM
    ovirt-node=ovirtlago.virt:NodeVM
    ovirt-engine=ovirtlago.virt:EngineVM
    ovirt-host=ovirtlago.virt:HostVM

lago.plugins.vm_provider =
    local-libvirt=lago.vm:LocalLibvirtVMProvider
    ssh=lago.vm:SSHVMProvider

lago.plugins.vm_service =
    systemd=lago.service:SystemdService
    sysvinit=lago.service:SysVInitService
    systemdcontainer=lago.service:SystemdContainerService

lago.plugins.ovirt.cli =
    collect=ovirtlago.cmd:do_ovirt_collect
    deploy=ovirtlago.cmd:do_deploy
    engine-setup=ovirtlago.cmd:do_ovirt_engine_setup
    reposetup=ovirtlago.cmd:do_ovirt_reposetup
    revert=ovirtlago.cmd:do_ovirt_revert
    runtest=ovirtlago.cmd:do_ovirt_runtest
    serve=ovirtlago.cmd:do_ovirt_serve
    snapshot=ovirtlago.cmd:do_ovirt_snapshot
    start=ovirtlago.cmd:do_ovirt_start
    stop=ovirtlago.cmd:do_ovirt_stop
