[metadata]
name = lago
summary = Deploy and tear down environments of several virtual machines
description-file =
    README.rst
author = David Caro and Lago developers
author_email = lago-devel@ovirt.org
home-page = https://github.com/lago-project/lago
license = GNU GPLv2+
platform = Linux
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
keywords =
    virtualization
    testing
    vm

[files]
packages =
    lago
    lago.plugins

[flake8]
# ignore line break before operator
ignore = W503
exclude = */*venv/*,automation-build,rpmbuild,dist,tests/functional,.eggs

[package_data]
lago =
    *.xml

[entry_points]
console_scripts =
    lagocli=lago.cmd:main
    lago=lago.cmd:main

lago.plugins.cli =
    cleanup=lago.cmd:do_cleanup
    collect=lago.cmd:do_collect
    console=lago.cmd:do_console
    copy-from-vm=lago.cmd:do_copy_from_vm
    copy-to-vm=lago.cmd:do_copy_to_vm
    deploy=lago.cmd:do_deploy
    destroy=lago.cmd:do_destroy
    ansible_hosts=lago.cmd:do_generate_ansible_hosts
    init=lago.cmd:do_init
    list=lago.cmd:do_list
    revert=lago.cmd:do_revert
    set-current=lago.workdir:set_current
    shell=lago.cmd:do_shell
    snapshot=lago.cmd:do_snapshot
    start=lago.cmd:do_start
    status=lago.cmd:do_status
    stop=lago.cmd:do_stop
    generate-config=lago.cmd:do_generate
    export=lago.cmd:do_export
    shutdown=lago.cmd:do_shutdown

lago.plugins.output =
    default=lago.plugins.output:DefaultOutFormatPlugin
    json=lago.plugins.output:JSONOutFormatPlugin
    yaml=lago.plugins.output:YAMLOutFormatPlugin
    flat=lago.plugins.output:FlatOutFormatPlugin

lago.plugins.vm =
    default=lago.vm:DefaultVM

lago.plugins.vm_provider =
    local-libvirt=lago.providers.libvirt.vm:LocalLibvirtVMProvider
    ssh=lago.vm:SSHVMProvider

lago.plugins.vm_service =
    systemd=lago.service:SystemdService
    sysvinit=lago.service:SysVInitService
    systemdcontainer=lago.service:SystemdContainerService
